fixed unaligned content

--- a/srcs/containers/django/src/pong/static/css/style.css
+++ b/srcs/containers/django/src/pong/static/css/style.css
@@ -1,13 +1,13 @@
 #threejs-container {
 	position: absolute;
-	width: 100vw;
+	width: 100dvw;
 	height: 100dvh;
 	z-index: 0;
 }
 
 #vertical-line {
 	width: 2px;
-	height: 100%;
+	height: 100dvh;
 	background-color: rgb(255, 255, 255);
 	z-index: 2;
 }
@@ -24,7 +24,6 @@
 	border-top: 1px solid rgba(255, 255, 255, 0.5);
 	border-left: 1px solid rgba(255, 255, 255, 0.5);
 	backdrop-filter: blur(5px);
-	/* text-align: center; */
 	opacity: 1;
 	transition: opacity 1.5s ease-out;
 }
@@ -65,6 +64,11 @@
 		display: none;
 	}
 }
+
+.mobile-device #tournament-mode,
+.mobile-device #local-mode {
+            display: none;
+    }
 
 
 * {
